# Software-Caras-

./: CMakeLists.txt  FaceDetector.cpp  README.MD
PruebaFinalOCV/: FD.cpp  FaceDetector.cpp  FaceDetector.h  PruebaCamara.cpp  PruebaFinalOCV.sln  PruebaFinalOCV.vcxproj  PruebaFinalOCV.vcxproj.filters  main.cpp
